...
        style={[styles.listContainer, listContainerStyles]}
        contentContainerStyle={styles.scrollContentContainer}
      >
        <View style={styles.columnsContainer}>
          <View style={styles.column}>
            <View style={listStyles.listHolder}>
              <HomeItem title="popular" leftIcon={PopularIcon} dest="Popular" />
              <Divider />
              <HomeItem title="classic" leftIcon={ClassicIcon} dest="Classic" />
              <Divider />
              <HomeItem title="easy" leftIcon={EasyIcon} dest="Easy" />
              <Divider />
              <HomeItem title="new" leftIcon={NewIcon} dest="New" />
...
            <View style={listStyles.listHolder}>
              <HomeItem title="random" leftIcon={RandomIcon} dest="Random" />
            </View>
          </View>
          <View style={styles.column}>
            <View style={listStyles.listHolder}>
              <HomeItem title="about" leftIcon={AboutIcon} dest="About" testID="about_button" />
              <Divider />
              <HomeItem title="options" leftIcon={OptionsIcon} dest="Options" />
              <Divider />
              <HomeItem title="labels" leftIcon={LabelsIcon} dest="Labels" />
              <Divider />
              <HomeItem title="data" leftIcon={DataIcon} dest="Data" />
...
